objects/redwing__vILT_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Attendance_Synced_Error__c</fullName>
        <label>Attendance Synced Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Attendance_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Launch_URL__c</fullName>
        <label>Launch URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Meeting_Id__c</fullName>
        <label>Meeting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>vILT Meeting</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>vILT Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vILT Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>